# ladybug-rs

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  Dockerfile  Dockerfile.crewai  Dockerfile.full  Dockerfile.n8n  Dockerfile.release  Dockerfile.unified  HANDOVER.md  INTEGRATION_PLAN.md  INTEGRATION_SPEC.md  MESSAGE_IN_A_BOTTLE.md  PLAN-RUSTYNUM-INTEGRATION.md  README.md  REALITY_CHECK.md  RECONSTRUCTION_NOTES.md  docker-compose.yml  railway.toml  railway.toml.ghcr  verify_deploy.sh
.chatlog/: 2026-01-29-19-15-15-rust-cognitive-engine-complete.txt  2026-01-29-20-01-44-ladybug-rs-file-reconstruction.txt
.claude/: CC_SESSION_BOOTSTRAP.md  HANDOVER.md  PHASE2_SERVER_REWIRE.md  RUSTYNUM_PLANE_NODE_MASK.md  SURGERY_BLACKBOARD.md  SWAP_LANCE_TO_LANCEDB.md  TONIGHT_SESSION_STACK.md
.claude/prompts/: 00_SESSION_A_META.md  00a_PROMOTE_SPO_FIRST_CLASS.md  01_spo_distance_harvest.md  02_spo_distance_granularity.md  03_sigma_stripe_shift_detector.md  04_btree_clam_path_lineage.md  04a_merkle_eineindeutigkeit_addon.md  05_nars_causal_trajectory.md  08_lance_graph_lessons.md  13_awareness_loop_architecture.md  14_EMPA_x_awareness_loop_integration.md  15_RISC_brain_convergence_vision.md  16_open_brain_surgery_handover.md  17_five_path_teardown.md  17a_spo_rosetta_stone_addendum.md  18_brain_surgery_orchestration.md  19_hot_cold_separation_constraint.md  20_four_invariants.md  22_sisyphus_then_forks.md  23_alpha_channel_risc_modifier.md  24_blake3_int8_bundle_encoding.md  25_node_plane_mask.md  26_entry_point.md
.claude/reference/: EMPA_arXiv_2603.00552v1_fulltext.md
.deprecated/: README.md
.deprecated/container/: addr_bridge.rs  cog_redis_bridge.rs  dn_spine_cache.rs  plasticity.rs
.deprecated/pr127_128_json_hydrate/: README.md  server_hydrate_block.rs
.github/workflows/: build-release.yml  ci-master.yml  proof.yml  rust.yml
benches/: cam_ops.rs  fingerprint.rs  hamming.rs
crates/ladybug-contract/: Cargo.toml
crates/ladybug-contract/src/: address.rs  codebook.rs  cogrecord8k.rs  container.rs  delegation.rs  geometry.rs  index_types.rs  layers.rs  legacy.rs  lib.rs  meta.rs  nars.rs  qualia.rs  record.rs  schema.rs  temporal.rs  wide_container.rs  wide_meta.rs  wire.rs
docs/: 34_TACTICS_INTEGRATION_PLAN.md  34_TACTICS_x_REASONING_LADDER.md  34_TAKTIKEN_x_REASONING_LEITER_DE.md  BACKUP_AND_SCHEMA.md  BINDSPACE_UNIFICATION.md  CLAM_HARDENING.md  COGNITIVE_ARCHITECTURE.md  COGNITIVE_FABRIC.md  COGNITIVE_RECORD_192.md  COGNITIVE_RECORD_256.md  COGNITIVE_SUBSTRATE_CONTRACTS.md  COGRECORD_65536.md  COMPOSITE_FINGERPRINT_SCHEMA.md  CONVERGENCE-Plan.md  CREWAI_INTEGRATION.md  DELTA_ENCODING_FORMATS.md  DEPLOYMENT.md  DEPRECATED_INDEX.md  EXTENSIONS.md  FINGERPRINT_ARCHITECTURE_REPORT.md  FIREFLY-Integration-Plan.md  GEL_EXECUTION_FABRIC.md  GEL_STORAGE_ARCHITECTURE.md  HANDOVER.md  HANDOVER_DISTILLATION.md  IMPLEMENTATION_TODO.md  INTEGRATION_CONTRACT_v2.md  INTEGRATION_EXECUTION_PLAN.md  INTEGRATION_PLAN.md  INTEGRATION_PROOF_PLAN_v2.md  INTERFERENCE_TRUTH_ENGINE.md  INVENTORY_WHAT_EXISTS.md  LADYBUG_PROOF_ROADMAP.md  LANCE_HARVEST.md  NSM_REPLACES_JINA.md  PERSONA_EXTENSION.md  PREFIX_DN_TRAVERSAL.md  QUANTUM_ALGORITHMS_ORCHESTRATOR.md  QUANTUM_CRYSTAL_ORCHESTRATOR.md  QUANTUM_FIELD_ORCHESTRATOR.md  (+11 more)
docs/spo_3d/: CONTRACTS.md  INTEGRATION_PLAN.md  NATURES_CAM.md  SCHEMA.md
docs/status_quo/: lance.rs.bak
examples/: basic_fingerprint.rs  cam_query.rs  cognitive_graph.rs  heartbeat.rs  quantum_ops.rs
sdk/python/: ladybugdb.py  setup.py
src/: cypher_bridge.rs  lib.rs
src/bench/: comparison.rs  memory.rs  mod.rs  recall.rs  throughput.rs
src/chess/: fingerprint.rs  mod.rs  populate.rs  position.rs
src/cognitive/: awareness.rs  cognitive_kernel.rs  collapse_gate.rs  cortex.rs  fabric.rs  grammar_engine.rs  layer_stack.rs  membrane.rs  metacog.rs  mod.rs  pattern_detector.rs  quad_triangle.rs  recursive.rs  rung.rs  satisfaction_gate.rs  service.rs  seven_layer.rs  sieve.rs  step_handler.rs  style.rs  substrate.rs  subsystem_impl.rs  thought.rs  two_stroke.rs  unified_fabric.rs  unified_stack.rs
src/container/: adjacency.rs  cache.rs  csr_bridge.rs  delta.rs  dn_redis.rs  geometry.rs  graph.rs  meta.rs  migrate.rs  mod.rs  record.rs  search.rs  semiring.rs  spine.rs  tests.rs  traversal.rs
src/contract/: enricher.rs  enrichment.rs  envelope.rs  mod.rs  spectator.rs  types.rs
src/core/: fingerprint.rs  mod.rs  rustynum_accel.rs  scent.rs  simd.rs  vsa.rs
src/extensions/: codebook_training.rs  cognitive_codebook.rs  context_crystal.rs  crystal_lm.rs  deepnsm_integration.rs  meta_resonance.rs  mod.rs  nsm_substrate.rs  sentence_crystal.rs
src/fabric/: executor.rs  firefly_frame.rs  gel.rs  mod.rs  mrna.rs  shadow.rs  udp_transport.rs
src/flight/: actions.rs  capabilities.rs  crew_actions.rs  mod.rs  server.rs
src/grammar/: causality.rs  mod.rs  nsm.rs  qualia.rs  triangle.rs  unified_parser.rs
src/graph/: avx_engine.rs  cognitive.rs  edge.rs  mod.rs  traversal.rs
src/learning/: blackboard.rs  cam_ops.rs  causal_bridge.rs  causal_ops.rs  cognitive_frameworks.rs  cognitive_styles.rs  concept.rs  dream.rs  feedback.rs  mod.rs  moment.rs  quantum_ops.rs  resonance.rs  rl_ops.rs  session.rs
src/mul/: compass.rs  dk_detector.rs  false_flow.rs  free_will_mod.rs  gate.rs  homeostasis.rs  hysteresis.rs  learning.rs  mod.rs  risk_vector.rs  trust_qualia.rs
src/nars/: adversarial.rs  context.rs  contradiction.rs  evidence.rs  inference.rs  mod.rs  truth.rs
src/orchestration/: a2a.rs  agent_card.rs  blackboard_agent.rs  crew_bridge.rs  debate.rs  handover.rs  kernel_extensions.rs  meta_orchestrator.rs  mod.rs  persona.rs  semantic_kernel.rs  substrate_bridge.rs  thinking_template.rs
src/python/: mod.rs
src/qualia/: agent_state.rs  council.rs  dream_bridge.rs  felt_parse.rs  felt_traversal.rs  gestalt.rs  meaning_axes.rs  mod.rs  mul_bridge.rs  reflection.rs  resonance.rs  texture.rs  volition.rs
src/query/: builder.rs  cypher.rs  (+12 more)
tests/: proof_foundation.rs  proof_level_a_gaps.rs  proof_reasoning_ladder.rs  proof_tactics.rs
(+98 files in other folders)
