[workspace]
members = [".", "crates/ladybug-contract"]

[package]
name = "ladybug"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Crystal Lake: Unified Cognitive Database with 4096 CAM Operations, Quantum-Inspired Operators, and 144 Verb Graph Substrate"
repository = "https://github.com/AdaWorldAPI/ladybug-rs"
keywords = ["database", "graph", "vector", "reasoning", "agi", "lance", "cognitive", "quantum"]
categories = ["database", "science", "algorithms", "simulation"]
readme = "README.md"
authors = ["Jan Hübener", "Ada Consciousness Project"]

[lib]
name = "ladybug"
crate-type = ["cdylib", "rlib"]

# =============================================================================
# FEATURES
# =============================================================================

[features]
default = ["simd", "parallel"]

# Core features
simd = []                        # AVX-512 SIMD for Hamming operations
parallel = ["rayon"]             # Parallel processing

# Storage backends
lancedb = ["lance"]              # LanceDB vector storage
lance-zero-copy = []             # Zero-copy integration (uses Arrow buffers)
neo4j = ["neo4rs"]               # Neo4j graph database
redis = ["dep:redis"]            # Redis caching

# Extensions
python = ["pyo3"]                # Python bindings
codebook = []                    # Cognitive codebook (NSM, NARS, etc.)
hologram = []                    # Holographic reduced representations
spo = ["reqwest"]                # Subject-Predicate-Object triples
compress = ["lz4"]               # Compression support
quantum = []                     # Quantum-inspired operators
bench = []                       # Benchmark suite (comparison vs Qdrant/Milvus)
flight = ["arrow-flight", "tonic", "prost"]  # Arrow Flight MCP server
crewai = ["flight"]                          # crewAI orchestration (A2A, agent cards, thinking templates)
json_fallback = []                           # Legacy JSON MCP types (backwards compat)
rustynum = ["dep:rustynum-rs"]               # AVX-512 VPOPCNTDQ + VNNI via rustynum

# Vendor integrations — uncommented by Dockerfile presets at build time.
# Require repos cloned into vendor/ and dependency lines below uncommented.
# See: Dockerfile.n8n, Dockerfile.crewai, Dockerfile.full
# vendor-n8n = ["dep:n8n-core", "dep:n8n-workflow", "dep:n8n-arrow", "dep:n8n-grpc", "dep:n8n-hamming"]
# vendor-crewai = ["dep:crewai-vendor", "crewai"]

# All features
full = [
    "simd", "parallel", "python",
    "codebook", "hologram", "spo", "compress", "quantum",
    "lancedb", "neo4j", "redis", "rustynum"
]

# =============================================================================
# CORE DEPENDENCIES
# =============================================================================

[dependencies]
ladybug-contract = { path = "crates/ladybug-contract" }

# -----------------------------------------------------------------------------
# Storage: LanceDB + Arrow ecosystem
# Lance 2.0.0 released on crates.io (Feb 5, 2026).
# Arrow 57.x aligns with DataFusion 52 / Lance 2.x.
# -----------------------------------------------------------------------------
lance = { version = "2.0", optional = true, default-features = false }
arrow = { version = "57", features = ["ffi"] }
arrow-array = "57"
arrow-schema = "57"
arrow-buffer = "57"
arrow-data = "57"
arrow-cast = "57"
arrow-select = "57"
parquet = { version = "57", features = ["snap", "lz4", "zstd"] }
arrow-flight = { version = "57", features = ["flight-sql-experimental"], optional = true }
arrow-ipc = "57"
# tonic/prost must match arrow-flight's versions (0.14.1)
tonic = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
bytes = "1.11"

# -----------------------------------------------------------------------------
# Query: DataFusion SQL engine
# DataFusion 51.x - upgrade to 52 when liblzma conflict fixed
# To use DF 52: uncomment patch below and set datafusion = "52"
# -----------------------------------------------------------------------------
datafusion = "51"
sqlparser = "0.60"

# -----------------------------------------------------------------------------
# Graph: Neo4j driver
# -----------------------------------------------------------------------------
neo4rs = { version = "0.8", optional = true }

# -----------------------------------------------------------------------------
# Cache: Redis
# redis 1.0 — major rewrite, tokio-comp → tokio-rustls-comp
# -----------------------------------------------------------------------------
redis = { version = "1.0", features = ["tokio-rustls-comp", "json"], optional = true }

# -----------------------------------------------------------------------------
# Async runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.49", features = ["full", "tracing"] }
futures = "0.3"
async-trait = "0.1"

# -----------------------------------------------------------------------------
# Parallelism
# -----------------------------------------------------------------------------
rayon = { version = "1.11", optional = true }
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "6.1"

# -----------------------------------------------------------------------------
# Serialization
# -----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
bincode = "1.3"
rmp-serde = "1.3"

# -----------------------------------------------------------------------------
# Utilities
# -----------------------------------------------------------------------------
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.20", features = ["v4", "serde"] }
hashbrown = { version = "0.15", features = ["serde"] }
smallvec = { version = "1.15", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
num-traits = "0.2"
num_cpus = "1.17"
itertools = "0.13"
once_cell = "1.21"
lazy_static = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"

# -----------------------------------------------------------------------------
# Compression
# -----------------------------------------------------------------------------
lz4 = { version = "1.28", optional = true }

# -----------------------------------------------------------------------------
# HTTP client (for SPO/external APIs)
# reqwest 0.12 — hyper 1.0 based, rustls default
# -----------------------------------------------------------------------------
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }

# -----------------------------------------------------------------------------
# Python bindings
# pyo3 0.23 — latest stable with edition 2021+ support
# (0.28 requires edition 2024 build tooling changes)
# -----------------------------------------------------------------------------
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

# -----------------------------------------------------------------------------
# Vendor: n8n-rs (workflow automation engine)
# Source: https://github.com/AdaWorldAPI/n8n-rs
# Uncommented by Dockerfile.n8n / Dockerfile.full at build time.
# Requires: git clone https://github.com/AdaWorldAPI/n8n-rs vendor/n8n-rs
# NOTE: n8n crates pin Arrow 53 / DataFusion 43. The Dockerfiles add
# [patch.crates-io] entries to unify Arrow/DataFusion to ladybug's versions.
# -----------------------------------------------------------------------------
# n8n-core     = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-core",     optional = true }
# n8n-workflow = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-workflow",  optional = true }
# n8n-arrow    = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-arrow",    optional = true }
# n8n-grpc     = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-grpc",     optional = true }
# n8n-hamming  = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-hamming",  optional = true }

# -----------------------------------------------------------------------------
# Vendor: crewai-rust (AI agent orchestration framework)
# Source: https://github.com/AdaWorldAPI/crewai-rust
# Uncommented by Dockerfile.crewai / Dockerfile.full at build time.
# Requires: git clone https://github.com/AdaWorldAPI/crewai-rust vendor/crewai-rust
# No version conflicts — crewai has no Arrow/DataFusion deps.
# Renamed to crewai-vendor to avoid collision with ladybug's built-in crewai feature.
# -----------------------------------------------------------------------------
# crewai-vendor = { package = "crewai", path = "vendor/crewai-rust", optional = true }

# -----------------------------------------------------------------------------
# Vendor: rustynum-rs (SIMD numerical library with AVX-512 VPOPCNTDQ + VNNI)
# Source: https://github.com/AdaWorldAPI/rustynum
# Provides runtime-dispatched kernels:
#   - VPOPCNTDQ popcount/hamming (8× speedup over scalar POPCNT)
#   - VNNI VPDPBUSD int8 dot product (64× speedup for embeddings)
#   - Optimized bundle (ripple-carry > per-bit counting)
#   - GEMM for batch operations
#   - Zero-copy Container bridge: view_u64_as_bytes()
# Requires: nightly Rust (portable_simd)
# Requires: git clone https://github.com/AdaWorldAPI/rustynum vendor/rustynum
# -----------------------------------------------------------------------------
rustynum-rs = { path = "vendor/rustynum/rustynum-rs", optional = true }

# =============================================================================
# DEV DEPENDENCIES
# =============================================================================

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.15"
tokio-test = "0.4"
proptest = "1.6"
pretty_assertions = "1.4"

# =============================================================================
# BENCHMARKS
# =============================================================================

[[bench]]
name = "hamming"
harness = false

[[bench]]
name = "fingerprint"
harness = false

[[bench]]
name = "cam_ops"
harness = false

# =============================================================================
# EXAMPLES
# =============================================================================

[[example]]
name = "basic_fingerprint"
path = "examples/basic_fingerprint.rs"

[[example]]
name = "cognitive_graph"
path = "examples/cognitive_graph.rs"

[[example]]
name = "quantum_ops"
path = "examples/quantum_ops.rs"

[[example]]
name = "cam_query"
path = "examples/cam_query.rs"

# =============================================================================
# BINARIES
# =============================================================================

[[bin]]
name = "ladybug-server"
path = "src/bin/server.rs"

[[bin]]
name = "ladybug-flight"
path = "src/bin/flight_server.rs"
required-features = ["flight"]

[[bin]]
name = "ladybug-bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

# =============================================================================
# PROFILE: Release optimizations
# =============================================================================

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
lto = "thin"
opt-level = 3

# =============================================================================
# PATCH: DataFusion 52 upgrade (when ready)
# DataFusion 52 has internal liblzma conflict (0.4.4 vs 0.4.5)
# To enable: change datafusion = "52" above and uncomment patch below
# =============================================================================

# [patch.crates-io]
# Lance vendor patches — UNCOMMENT when lancedb feature is ready and
# submodules are checked out (git submodule update --init --recursive).
# These are NOT needed for production builds (simd,parallel,flight).
# Cargo validates ALL patch paths at resolution time regardless of features,
# so keeping these active breaks builds where submodules aren't cloned
# (Railway, GitHub Actions without actions/checkout submodules: true).
#
# lance = { path = "vendor/lance/rust/lance", default-features = false }
# lance-core = { path = "vendor/lance/rust/lance-core" }
# lance-io = { path = "vendor/lance/rust/lance-io", default-features = false }
# lance-file = { path = "vendor/lance/rust/lance-file" }
# lance-encoding = { path = "vendor/lance/rust/lance-encoding" }
# lance-table = { path = "vendor/lance/rust/lance-table" }
# lance-index = { path = "vendor/lance/rust/lance-index" }
# lance-arrow = { path = "vendor/lance/rust/lance-arrow" }
# lance-linalg = { path = "vendor/lance/rust/lance-linalg" }
# lance-datafusion = { path = "vendor/lance/rust/lance-datafusion" }
# lance-namespace = { path = "vendor/lance/rust/lance-namespace" }
# lance-geo = { path = "vendor/lance/rust/lance-geo" }
# lance-bitpacking = { path = "vendor/lance/rust/compression/bitpacking" }
# fsst = { path = "vendor/lance/rust/compression/fsst" }
# datafusion = { git = "https://github.com/AdaWorldAPI/datafusion", branch = "liblzma-fix" }
#
# n8n-rs vendor overrides — use local clones instead of git fetch:
#   git clone https://github.com/AdaWorldAPI/n8n-rs vendor/n8n-rs
# n8n-core     = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-core" }
# n8n-workflow = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-workflow" }
# n8n-arrow    = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-arrow" }
# n8n-grpc     = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-grpc" }
# n8n-hamming  = { path = "vendor/n8n-rs/n8n-rust/crates/n8n-hamming" }
#
# crewai-rust vendor override — use local clone instead of git fetch:
#   git clone https://github.com/AdaWorldAPI/crewai-rust vendor/crewai-rust
# crewai = { path = "vendor/crewai-rust" }
