[package]
name = "ladybug-contract"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "Substrate types for LadybugDB: Container, CogRecord, CAM codebook, CognitiveAddress"
repository = "https://github.com/AdaWorldAPI/ladybug-rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
